--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,23 +37,20 @@ body {
   font-size: 4em;
 }
 
-
-.game-container {
+div.game-container {
   display: grid;
   grid-template-columns: repeat(4, auto);
   grid-gap: 10px;
   margin: 50px;
   justify-content: center;
-  
+  perspective: 500px;
 }
 
 .card{
-    position: relative;
-    background-color:black;
+    position: relative; 
     height: 170px;
     width: 125px;
 }
-
 
 .card-face {
   position: absolute;
@@ -62,20 +59,118 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  backface-visibility: hidden;
+  border-radius: 12px;
+  border-width: 1px;
+  border-style: solid;
+  transition: transform 500ms ease-in-out;
+  
 }
 
-.ghg {
+.card.visible .card-back {
+  transform: rotateY(-180deg);
+}
+
+.card.visible .card-front {
+  transform: rotateY(0)
+}
+
+
+.card.matched .win-match{
+
+animation: dance 1s linear infinite 500ms;
+}
+
+.overlay-text {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  color: #FF6D00;
+  font-family: Supermercado, serif;
+}
+
+.overlay-text-small {
+  font-size: .3em;
+}
+
+.overlay-text.visible {
+  display: flex;
+  flex-direction: column;
+  animation: overlay-grow 500ms forwards;
+}
+
+
+@keyframes overlay-grow {
+  from {
+    background-color: rgba(0, 0, 0, 0);
+    font-size: 0;
+  }
+  to {
+    background-color: rgba(0, 0, 0, .8);
+    font-size: 10em;
+  }
+}
+
+@keyframes dance {
+    0%, 100%  {
+        transform: rotate(0);
+    }
+    25% {
+        transform: rotate(-30deg);
+    }
+    75% {
+        transform: rotate(30deg);
+  }
+}
+
+
+.card-back {
+    background-color:black;
+    border-color: rebeccapurple;
+}
+
+.card-front {
+  background-color: #FFBB89;
+  border-color: #333;
+  transform: rotateY(180deg);
+}
+
+.win-match {
+    transform: (.9);
+}
+
+.card-front:hover .win-match {
+    transform: scale(1);
+    transition: transform 100ms ease-in-out;
+}
+
+
+.ghg{
   position: absolute;
   width: 47px;
   height: 47px;
- 
+  transition: width 100ms ease-in-out, height 100ms ease-in-out;
+  
 }
 
-.ghg-topLeft-carbondioxide{
+.card-face:hover .ghg {
+   height: 52px;
+    width: 52px;
+}
+
+
+.ghg-topLeft-carbondioxide {
   transform: rotate(270deg);
   top: 0;
   left: 0;
-}
+} 
 
 .ghg-topRight-N2O{
   transform: rotate(-260deg);
@@ -89,10 +184,50 @@ body {
   left: 0;
 }
 
-
-
 .ghg-bottomRight-methane{
   
   bottom: 0;
   right: 0;
+}
+
+
+
+.bonny,
+.win-match {
+position: absolute;
+  width: 60px;
+  height: 60px;
+  
+}
+
+.spin {
+  animation-name: spin;
+  animation-duration: 5000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
+  /* transform: rotate(3deg); */
+   /* transform: rotate(0.3rad);/ */
+   /* transform: rotate(3grad); */ 
+   /* transform: rotate(.03turn);  */
+}
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
+
+@media (max-width: 600px) {
+  .game-container {
+    grid-template-columns: repeat(2, auto);
+  }
+
+  .game-info-container {
+    flex-direction: column;
+    align-items: center;
+  }
 }
