--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,247 +1,132 @@
 @import url('https://fonts.googleapis.com/css2?family=Langar&family=Supermercado+One&display=swap');
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    font-family: "Supermercado", sans-serif;
 }
 
-html {
-  min-height: 100vh;
-}
+.welcome-page{
+    height: 75vh;
 
-body {
-  
-  background: url("../images/background.jpg");
-}
-
-.page-title {
-  color: #FF6D00;
-  font-family: Langar, serif;
-  font-weight: normal;
-  text-align: center;
-  font-size: 6em;
-}
-
-.game-info-container {
-  grid-column: 1 / -1;
-  display: flex;
-  justify-content: space-between;
-  
-}
-
-
-
-
-.game-info {
-  font-family: Supermercado, serif;
-  color: #FFBB89;
-  font-size: 4em;
-}
-
-div.game-container {
-  display: grid;
-  grid-template-columns: repeat(4, auto);
-  grid-gap: 10px;
-  margin: 50px;
-  justify-content: center;
-  perspective: 500px;
-}
-
-.card{
-    position: relative; 
-    height: 170px;
-    width: 125px;
-}
-
-.card-face {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  backface-visibility: hidden;
-  border-radius: 12px;
-  border-width: 1px;
-  border-style: solid;
-  transition: transform 500ms ease-in-out;
-  
-}
-
-.card.visible .card-back {
-  transform: rotateY(-180deg);
-}
-
-.card.visible .card-front {
-  transform: rotateY(0)
-}
-
-
-.card.matched .win-match{
-
-animation: dance 1s linear infinite 500ms;
-}
-
-.overlay-text {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  justify-content: center;
-  align-items: center;
-  z-index: 100;
-  color: #FF6D00;
-  font-family: Supermercado, serif;
-}
-
-.overlay-text-small {
-  font-size: .3em;
-}
-
-.overlay-text.visible {
-  display: flex;
-  flex-direction: column;
-  animation: overlay-grow 500ms forwards;
-}
-
-
-@keyframes overlay-grow {
-  from {
-    background-color: rgba(0, 0, 0, 0);
-    font-size: 0;
-  }
-  to {
-    background-color: rgba(0, 0, 0, .8);
-    font-size: 10em;
-  }
-}
-
-@keyframes dance {
-    0%, 100%  {
-        transform: rotate(0);
-    }
-    25% {
-        transform: rotate(-30deg);
-    }
-    75% {
-        transform: rotate(30deg);
-  }
-}
-
-
-.card-back {
-    background-color:black;
-    border-color: rebeccapurple;
-}
-
-.card-front {
-  background-color: whitesmoke;
-  border-color: #333;
-  transform: rotateY(180deg);
-}
-
-.win-match {
-    transform: (.9);
-}
-
-.card-front:hover .win-match {
-    transform: scale(1);
-    transition: transform 100ms ease-in-out;
-}
-
-
-.ghg{
-  position: absolute;
-  width: 47px;
-  height: 47px;
-  transition: width 100ms ease-in-out, height 100ms ease-in-out;
-  
-}
-
-.card-face:hover .ghg {
-   height: 52px;
-    width: 52px;
-}
-
-
-.ghg-topLeft-carbondioxide {
-  transform: rotate(270deg);
-  top: 0;
-  left: 0;
-} 
-
-.ghg-topRight-N2O{
-  transform: rotate(-260deg);
-  top: 0;
-  right: 0;
-}
-
-.ghg-bottomLeft-cfc{
-  
-  bottom: 0;
-  left: 0;
-}
-
-.ghg-bottomRight-methane{
-  
-  bottom: 0;
-  right: 0;
-}
-
- .card-front .eden {
-  transform: rotate(0deg);
-  top: 0;
-  left: 0;
-} 
-
-
-.card-front .edenz{
-
-transform: rotate(360deg);
-  top: 0;
-  right: 0;
-}
-
-.bonny,
-.win-match {
-position: absolute;
-  width: 70px;
-  height: 70px;
-  
-}
-
-.spin {
-  animation-name: spin;
-  animation-duration: 5000ms;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear; 
-  /* transform: rotate(3deg); */
-   /* transform: rotate(0.3rad);/ */
-   /* transform: rotate(3grad); */ 
-   /* transform: rotate(.03turn);  */
-}
-
-@keyframes spin {
-    from {
-        transform:rotate(0deg);
-    }
-    to {
-        transform:rotate(360deg);
-    }
-}
-
-
-@media (max-width: 600px) {
-  .game-container {
-    grid-template-columns: repeat(2, auto);
-  }
-
-  .game-info-container {
-    flex-direction: column;
+    background: url('../images/welcm.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    
+    display: flex;
     align-items: center;
-  }
+    justify-content: center;
+
+    position: relative;
 }
+
+.opaque-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+
+
+
+.navbar-dark {
+    padding: 0px;
+    border: 0;
+    background-color:#5a172a!important;
+}
+
+
+
+.navbar-dark .navbar-brand  {                                    
+        float:left;
+        font-family: "Supermercado", sans-serif;
+        font-size: 200%;
+        margin-left: 0px;
+        margin-bottom: 0;
+        padding-bottom: 2px;
+        padding-left: 50px;
+        border-bottom: 0;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        color: white;
+        text-decoration: none;
+        line-height: 75px;
+        height: 75px;
+
+}
+
+
+
+.collapse .naveLinks {
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
+}
+
+.nav-item {
+
+    text-align: center;
+    list-style: none;
+    padding: 0;
+    margin: 0px;
+    text-transform: normal;
+}
+
+.nav-item a {
+    width: 100%;
+    text-decoration: none;
+    margin: 0 5px;
+    color: #ffffff;
+}
+
+.nav-item a i {
+    padding-top: 5px;
+    display: inline;
+    color:#ffffff;
+    font-size: 30px;
+}
+
+.nav-item a span {
+    width: 100%;                               
+    padding-top: 5px;
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 2px;
+    text-align: center;
+    padding-bottom: 15px;
+  
+}
+
+
+.btn--red {
+    width: 150px;
+    margin: 5px 10px;
+    padding: 2px;
+    background-color: red;
+    color: white;
+    text-transform: uppercase;
+}
+ 
+
+ .quoteSection {
+
+    background: url('../images/welcm2.jpg') no-repeat center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    
+    
+
+ }
+
+ 
