--- a/assets/css/gamestyle.css
+++ b/assets/css/gamestyle.css
@@ -135,7 +135,7 @@ animation: dance 1s linear infinite 500ms;
 
 
 .card-back {
-    background-color:black;
+    background-color: FD151B; 
     border-color: rebeccapurple;
 }
 
